--- a/views/todo_menu.xml
+++ b/views/todo_menu.xml
@@ -1,25 +1,141 @@
 <?xml version="1.0"?> 
 <odoo> 
-  
 
-  <!-- Menu item to open To-do Task list --> 
+<!-- 
+model = "ir.action.act_window"
 
-<!-- Action to open To-do Task list --> 
-<record id="action_todo_task" model="ir.actions.act_window">
-            <field name="name">To-do Task</field>
-            <field name="res_model">todo.task</field>  <!--es el modelo que hara la accion-->
+Elementos:
+1. name -> Hace referencia al nombre de la accion y el nombre que aparecera cuando este se ejecute
+2. res_model -> Hace referencia al nombre del modelo sobre el cual estamos trabajando o se va a ejecutar nuestra vista(comportamientos)
+3. view_model -> tipos de vist especifico(tree,form,activity,calendar)
+4. target -> Por defecto trae un valor current, al momento de accionar 
+5. contact -> Pasa valores a nuestra vista que se activran con las acciones de ventana
+6. domain -> Permite establecer filtros sobre los registros que deseamos mostrar.
+7. limit -> Representa la cantidad de registros maximos que queremos tener dentro de nuestro modelo
+8. src_model -> Se pueden accionar con botones desde formulario o desde lista, en accion podemos definir un boton que nos active un modelo 
+que va a ejecutar una logica dentro del modelo
+9. multi -> Nos permite seleccionar >1 registros para presionar un boton que afecte a todos los registros
+-->
+<!-- Menu item to open To-do Task list --> 
+
+<!-- Action to open Views --> 
+<record id="action_maestro" model="ir.actions.act_window">
+            <field name="name">Categoria Ingreso</field>
+            <field name="res_model">categoria.ingreso</field>  <!--es el modelo que hara la accion-->
             <field name="view_mode">tree,form</field> <!-- distintas vistas que puede tener, tres como lista y form dforumalrio-->
             <field name="help" type="html"> <!-- Es como un comentario-->
             <p>
-            Es un modulo para hacer tareas
+            Es un modulo para registrar los maestros del sistema
             </p>
             </field>
 </record>
 
-  <menuitem id="menu_todo_task_principal" name="Todo Principal" /> 
+<record id="action_maestro_categoria_ingreso" model="ir.actions.act_window">
+            <field name="name">Categoria Ingreso</field>
+            <field name="res_model">categoria.ingreso</field>  <!--es el modelo que hara la accion-->
+            <field name="view_mode">tree,form</field> <!-- distintas vistas que puede tener, tres como lista y form dforumalrio-->
+            <field name="help" type="html"> <!-- Es como un comentario-->
+            <p>
+            Es un modulo para registrar los tipos de ingreso
+            </p>
+            </field>
+</record>
 
-  <menuitem id="menu_todo_task" parent="menu_todo_task_principal" name="Todos" action="action_todo_task" /> 
-  <menuitem id="menu_todo_task2" parent="menu_todo_task_principal" name="Todos2" action="action_todo_task" /> 
+<record id="action_maestro_categoria_egreso" model="ir.actions.act_window">
+            <field name="name">Categoria Ingreso</field>
+            <field name="res_model">categoria.ingreso</field>  <!--es el modelo que hara la accion-->
+            <field name="view_mode">tree,form</field> <!-- distintas vistas que puede tener, tres como lista y form dforumalrio-->
+            <field name="help" type="html"> <!-- Es como un comentario-->
+            <p>
+            Es un modulo para registrar los tipos de egreso
+            </p>
+            </field>
+</record>
+
+<record id="action_maestro_categoria_cliente" model="ir.actions.act_window">
+            <field name="name">Categoria Cliente</field>
+            <field name="res_model">categoria.cliente</field>  <!--es el modelo que hara la accion-->
+            <field name="view_mode">tree,form</field> <!-- distintas vistas que puede tener, tres como lista y form dforumalrio-->
+            <field name="help" type="html"> <!-- Es como un comentario-->
+            <p>
+            Es un modulo para registrar los tipos de cliente
+            </p>
+            </field>
+</record>
+
+
+<record id="action_maestro_proveedor" model="ir.actions.act_window">
+            <field name="name">Proveedor</field>
+            <field name="res_model">proveedor</field>  <!--es el modelo que hara la accion-->
+            <field name="view_mode">tree,form</field> <!-- distintas vistas que puede tener, tres como lista y form dforumalrio-->
+            <field name="help" type="html"> <!-- Es como un comentario-->
+            <p>
+            Es un modulo para registrar los proveedores
+            </p>
+            </field>
+</record>
+
+<record id="action_maestro_cliente" model="ir.actions.act_window">
+            <field name="name">Cliente</field>
+            <field name="res_model">cliente</field>  <!--es el modelo que hara la accion-->
+            <field name="view_mode">tree,form</field> <!-- distintas vistas que puede tener, tres como lista y form dforumalrio-->
+            <field name="help" type="html"> <!-- Es como un comentario-->
+            <p>
+            Es un modulo para registrar los clientes
+            </p>
+            </field>
+</record>
+
+
+
+
+<record id="action_operacion" model="ir.actions.act_window">
+            <field name="name">Ingreso</field>
+            <field name="res_model">ingreso</field>  <!--es el modelo que hara la accion-->
+            <field name="view_mode">tree,form</field> <!-- distintas vistas que puede tener, tres como lista y form dforumalrio-->
+            <field name="help" type="html"> <!-- Es como un comentario-->
+            <p>
+            Es un modulo para realizar las operaciones del sistema
+            </p>
+            </field>
+</record>
+
+<record id="action_operacion_ingreso" model="ir.actions.act_window">
+            <field name="name">Ingreso</field>
+            <field name="res_model">ingreso</field>  <!--es el modelo que hara la accion-->
+            <field name="view_mode">tree,form</field> <!-- distintas vistas que puede tener, tres como lista y form dforumalrio-->
+            <field name="help" type="html"> <!-- Es como un comentario-->
+            <p>
+            Es un modulo para realizar las operaciones de ingreso
+            </p>
+            </field>
+</record>
+
+<record id="action_operacion_egreso" model="ir.actions.act_window">
+            <field name="name">Egreso</field>
+            <field name="res_model">egreso</field>  <!--es el modelo que hara la accion-->
+            <field name="view_mode">tree,form</field> <!-- distintas vistas que puede tener, tres como lista y form dforumalrio-->
+            <field name="help" type="html"> <!-- Es como un comentario-->
+            <p>
+            Es un modulo para realizar las operaciones de egreso
+            </p>
+            </field>
+</record>
+
+
+  <menuitem id="menu_principal" name="Demo Finanzas" /> 
+
+  <menuitem id="menu_maestro" parent="menu_principal" name="Maestro" action="action_maestro"/>
+    <menuitem id="menu_maestro_categoria_ingreso" parent="menu_maestro" name="Categoria Ingreso" action="action_maestro_categoria_ingreso" />
+    <menuitem id="menu_maestro_categoria_cliente" parent="menu_maestro" name="Categoria Ingreso" action="action_maestro_categoria_cliente" />
+    <menuitem id="menu_maestro_categoria_cliente" parent="menu_maestro" name="Categoria Egreso" action="action_maestro_categoria_cliente" />   
+    <menuitem id="menu_maestro_cliente" parent="menu_maestro" name="Cliente" action="action_maestro_cliente" />
+    <menuitem id="menu_maestro_proveedor" parent="menu_maestro" name="Proveedor" action="action_maestro_proveedor" />
+
+  <menuitem id="menu_operacion" parent="menu_principal" name="Operacion" action="action_operacion" />  
+    <menuitem id="menu_operacion_ingreso" parent="menu_maestro" name="Ingreso" action="action_operacion_ingreso" />
+    <menuitem id="menu_operacion_egreso" parent="menu_maestro" name="Egreso" action="action_operacion_egreso" />
+  
   <!-- sequence : es el orden de aparacion de los submenus segun el numero --> 
 
 </odoo>
