--- a/wizards/wizard.xml
+++ b/wizards/wizard.xml
@@ -6,7 +6,6 @@
             <field name="arch" type="xml">
                 <form string="Recaudo de Ingreso">
                     <group>
-                        <!--<xpath expr="//field[@monto_recaudo='monto_recaudo']" position="after"></xpath>-->
                         <field name="monto_recaudo"/> <!-- campo heredado-->
                         <field name="monto_recaudo_igv"/>
                         <field name="monto_recaudo_detraccion"/>
@@ -21,37 +20,16 @@
             </field>
         </record>
 
-        <record id="view_modulo1_recaudo_ingreso_tree" model="ir.ui.view">
-            <field name="name">Recaudo Ingreso</field>
-            <field name="model">modulo1.pago</field>
-            <field name="arch" type="xml">
-                <tree string="Recaudo de Ingreso">
-                        <field name="monto_recaudo" />
-                </tree>
-            </field>
-        </record>
-
 
         <record id="action_view_modulo1_recaudo_ingreso_form" model="ir.actions.act_window">
             <field name="name">Recaudar Ingreso</field>
-            <field name="type">ir.actions.act_window</field>
             <field name="res_model">modulo1.transient.recaudo</field>
             <field name="view_mode">form</field>
             <field name="target">new</field>
-            <!-- TODO: check if we need this -->
+            <!-- TODO: check if we need this 
             <field name="binding_model_id" ref="modulo1.model_modulo1_ingreso" />
             <field name="binding_view_types">form</field>
+            -->
         </record>
-
-
-       <!-- <record id="action_view_modulo1_recaudo_ingreso_tree" model="ir.actions.act_window">
-            <field name="name">Recaudar Ingreso</field>
-            <field name="type">ir.actions.act_window</field>
-            <field name="res_model">modulo1.transient.recaudo</field>
-            <field name="view_mode">tree</field>
-            <field name="target">new</field>
-            <field name="binding_model_id" ref="modulo1.model_modulo1_pago" />
-            <field name="binding_view_types">form</field>
-        </record>-->
 
 </odoo>
